--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.7.0",
     "framer-motion": "^6.3.3",
+    "gsap": "^3.12.5",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
